--- a/code/5_MNIST_toy.ipynb
+++ b/code/5_MNIST_toy.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,106 @@
       "Train Epoch: 38 [10000/60000 (17%)]\tLoss: 139.605371\n",
       "Train Epoch: 38 [20000/60000 (33%)]\tLoss: 134.885928\n",
       "Train Epoch: 38 [30000/60000 (50%)]\tLoss: 135.042441\n",
-      "Train Epoch: 38 [40000/60000 (67%)]\tLoss: 134.458896\n"
+      "Train Epoch: 38 [40000/60000 (67%)]\tLoss: 134.458896\n",
+      "Train Epoch: 38 [50000/60000 (83%)]\tLoss: 134.538994\n",
+      "====> Epoch: 38 Average loss: 135.7526\n",
+      "====> Test set loss: 138.2555\n",
+      "Train Epoch: 39 [0/60000 (0%)]\tLoss: 131.476406\n",
+      "Train Epoch: 39 [10000/60000 (17%)]\tLoss: 136.165332\n",
+      "Train Epoch: 39 [20000/60000 (33%)]\tLoss: 138.117549\n",
+      "Train Epoch: 39 [30000/60000 (50%)]\tLoss: 131.831914\n",
+      "Train Epoch: 39 [40000/60000 (67%)]\tLoss: 129.642979\n",
+      "Train Epoch: 39 [50000/60000 (83%)]\tLoss: 132.078369\n",
+      "====> Epoch: 39 Average loss: 135.7224\n",
+      "====> Test set loss: 138.3081\n",
+      "Train Epoch: 40 [0/60000 (0%)]\tLoss: 143.245186\n",
+      "Train Epoch: 40 [10000/60000 (17%)]\tLoss: 138.123047\n",
+      "Train Epoch: 40 [20000/60000 (33%)]\tLoss: 142.896348\n",
+      "Train Epoch: 40 [30000/60000 (50%)]\tLoss: 147.296172\n",
+      "Train Epoch: 40 [40000/60000 (67%)]\tLoss: 131.232246\n",
+      "Train Epoch: 40 [50000/60000 (83%)]\tLoss: 135.291904\n",
+      "====> Epoch: 40 Average loss: 135.4978\n",
+      "====> Test set loss: 137.7227\n",
+      "Train Epoch: 41 [0/60000 (0%)]\tLoss: 138.177422\n",
+      "Train Epoch: 41 [10000/60000 (17%)]\tLoss: 142.466641\n",
+      "Train Epoch: 41 [20000/60000 (33%)]\tLoss: 132.563457\n",
+      "Train Epoch: 41 [30000/60000 (50%)]\tLoss: 134.743486\n",
+      "Train Epoch: 41 [40000/60000 (67%)]\tLoss: 133.499902\n",
+      "Train Epoch: 41 [50000/60000 (83%)]\tLoss: 132.060518\n",
+      "====> Epoch: 41 Average loss: 135.6034\n",
+      "====> Test set loss: 138.4466\n",
+      "Train Epoch: 42 [0/60000 (0%)]\tLoss: 135.889941\n",
+      "Train Epoch: 42 [10000/60000 (17%)]\tLoss: 141.529463\n",
+      "Train Epoch: 42 [20000/60000 (33%)]\tLoss: 137.869863\n",
+      "Train Epoch: 42 [30000/60000 (50%)]\tLoss: 133.153066\n",
+      "Train Epoch: 42 [40000/60000 (67%)]\tLoss: 127.486064\n",
+      "Train Epoch: 42 [50000/60000 (83%)]\tLoss: 138.119619\n",
+      "====> Epoch: 42 Average loss: 135.6070\n",
+      "====> Test set loss: 138.2018\n",
+      "Train Epoch: 43 [0/60000 (0%)]\tLoss: 133.881025\n",
+      "Train Epoch: 43 [10000/60000 (17%)]\tLoss: 125.914980\n",
+      "Train Epoch: 43 [20000/60000 (33%)]\tLoss: 136.327852\n",
+      "Train Epoch: 43 [30000/60000 (50%)]\tLoss: 142.297168\n",
+      "Train Epoch: 43 [40000/60000 (67%)]\tLoss: 143.892773\n",
+      "Train Epoch: 43 [50000/60000 (83%)]\tLoss: 134.982852\n",
+      "====> Epoch: 43 Average loss: 135.6477\n",
+      "====> Test set loss: 137.9005\n",
+      "Train Epoch: 44 [0/60000 (0%)]\tLoss: 125.233047\n",
+      "Train Epoch: 44 [10000/60000 (17%)]\tLoss: 132.367051\n",
+      "Train Epoch: 44 [20000/60000 (33%)]\tLoss: 137.643076\n",
+      "Train Epoch: 44 [30000/60000 (50%)]\tLoss: 147.069092\n",
+      "Train Epoch: 44 [40000/60000 (67%)]\tLoss: 137.751387\n",
+      "Train Epoch: 44 [50000/60000 (83%)]\tLoss: 135.096094\n",
+      "====> Epoch: 44 Average loss: 135.4173\n",
+      "====> Test set loss: 138.0976\n",
+      "Train Epoch: 45 [0/60000 (0%)]\tLoss: 135.005107\n",
+      "Train Epoch: 45 [10000/60000 (17%)]\tLoss: 135.550020\n",
+      "Train Epoch: 45 [20000/60000 (33%)]\tLoss: 137.254473\n",
+      "Train Epoch: 45 [30000/60000 (50%)]\tLoss: 142.512168\n",
+      "Train Epoch: 45 [40000/60000 (67%)]\tLoss: 137.534385\n",
+      "Train Epoch: 45 [50000/60000 (83%)]\tLoss: 133.428750\n",
+      "====> Epoch: 45 Average loss: 135.3741\n",
+      "====> Test set loss: 138.2607\n",
+      "Train Epoch: 46 [0/60000 (0%)]\tLoss: 142.964717\n",
+      "Train Epoch: 46 [10000/60000 (17%)]\tLoss: 140.460889\n",
+      "Train Epoch: 46 [20000/60000 (33%)]\tLoss: 124.137900\n",
+      "Train Epoch: 46 [30000/60000 (50%)]\tLoss: 141.736680\n",
+      "Train Epoch: 46 [40000/60000 (67%)]\tLoss: 130.582539\n",
+      "Train Epoch: 46 [50000/60000 (83%)]\tLoss: 140.653037\n",
+      "====> Epoch: 46 Average loss: 135.1076\n",
+      "====> Test set loss: 138.0059\n",
+      "Train Epoch: 47 [0/60000 (0%)]\tLoss: 137.692031\n",
+      "Train Epoch: 47 [10000/60000 (17%)]\tLoss: 133.705723\n",
+      "Train Epoch: 47 [20000/60000 (33%)]\tLoss: 133.461113\n",
+      "Train Epoch: 47 [30000/60000 (50%)]\tLoss: 129.304775\n",
+      "Train Epoch: 47 [40000/60000 (67%)]\tLoss: 139.802266\n",
+      "Train Epoch: 47 [50000/60000 (83%)]\tLoss: 133.729316\n",
+      "====> Epoch: 47 Average loss: 135.0655\n",
+      "====> Test set loss: 137.5686\n",
+      "Train Epoch: 48 [0/60000 (0%)]\tLoss: 133.377773\n",
+      "Train Epoch: 48 [10000/60000 (17%)]\tLoss: 134.501719\n",
+      "Train Epoch: 48 [20000/60000 (33%)]\tLoss: 127.217939\n",
+      "Train Epoch: 48 [30000/60000 (50%)]\tLoss: 139.572520\n",
+      "Train Epoch: 48 [40000/60000 (67%)]\tLoss: 138.548604\n",
+      "Train Epoch: 48 [50000/60000 (83%)]\tLoss: 131.632900\n",
+      "====> Epoch: 48 Average loss: 135.0027\n",
+      "====> Test set loss: 137.5383\n",
+      "Train Epoch: 49 [0/60000 (0%)]\tLoss: 139.108223\n",
+      "Train Epoch: 49 [10000/60000 (17%)]\tLoss: 133.301758\n",
+      "Train Epoch: 49 [20000/60000 (33%)]\tLoss: 135.509873\n",
+      "Train Epoch: 49 [30000/60000 (50%)]\tLoss: 141.430156\n",
+      "Train Epoch: 49 [40000/60000 (67%)]\tLoss: 130.596631\n",
+      "Train Epoch: 49 [50000/60000 (83%)]\tLoss: 128.966826\n",
+      "====> Epoch: 49 Average loss: 134.8667\n",
+      "====> Test set loss: 137.1730\n",
+      "Train Epoch: 50 [0/60000 (0%)]\tLoss: 140.939482\n",
+      "Train Epoch: 50 [10000/60000 (17%)]\tLoss: 139.019385\n",
+      "Train Epoch: 50 [20000/60000 (33%)]\tLoss: 136.161406\n",
+      "Train Epoch: 50 [30000/60000 (50%)]\tLoss: 138.448408\n",
+      "Train Epoch: 50 [40000/60000 (67%)]\tLoss: 142.491338\n",
+      "Train Epoch: 50 [50000/60000 (83%)]\tLoss: 133.602959\n",
+      "====> Epoch: 50 Average loss: 134.7053\n",
+      "====> Test set loss: 137.7537\n"
      ]
     }
    ],
@@ -568,15 +667,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
-    "    z = torch.randn(64, 2).cuda()\n",
-    "    sample = vae.decoder(z).cuda()\n",
+    "    z = torch.randn(64, 2)\n",
+    "    sample = vae.decoder(z)\n",
     "    save_image(sample.view(64, 1, 28, 28), './samples/sample_' + '.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
