--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,6 +267,24 @@
     "kwargs = {'num_workers': 1, 'pin_memory': True} if cuda else {}\n",
     "\n",
     "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n",
+      "'/home/ubuntu/AYP/code/models/co_authors_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_vae = get_all_features.VAE_Features(df)"
    ]
   },
   {
@@ -302,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 199,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -313,9 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new VAE FEATURES\n",
-      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n",
-      "'/home/ubuntu/AYP/code/models/co_authors_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+      "Using pre-defined VAE FEATURES\n"
      ]
     },
     {
@@ -340,13 +356,13 @@
     }
    ],
    "source": [
-    "train_set = ToyDS(df, selection_train)\n",
+    "train_set = ToyDS(df, selection_train, all_vae)\n",
     "train_loader=DataLoader(dataset= train_set, batch_size = BATCH_SIZE, shuffle = True, num_workers = num_workers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,18 +440,16 @@
     "    \n",
     "    \n",
     "    batch_size = x.size()[0]\n",
-    "    MAE =  F.mse_loss(recon_x, x)\n",
-    "\n",
+    "    MSE =  F.mse_loss(recon_x, x)\n",
     "    KLD_element = mu.pow(2).add_(log_var.exp()).mul_(-1).add_(1).add_(log_var)\n",
-    "    KLD = torch.sum(KLD_element).mul_(-0.5)\n",
-    "    assert(KLD >= 0)\n",
-    "    return (MAE + KLD) / batch_size\n",
-    "#     return MSE + KLD"
+    "    KLD = torch.sum(KLD_element).mul_(-0.5) / batch_size\n",
+    "#     assert(KLD >= 0)\n",
+    "    return MSE + KLD "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 222,
    "metadata": {
     "tags": []
    },
@@ -462,7 +476,7 @@
        ")"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 225,
    "metadata": {
     "tags": []
    },
@@ -530,79 +544,184 @@
      "output_type": "stream",
      "text": [
       "Started training epoch no. 1\n",
-      "====> Epoch: 1 Average loss: 0.00148319\n",
+      "====> Epoch: 1 Average loss: 0.03203329\n",
       "\n",
       "Started training epoch no. 2\n",
-      "====> Epoch: 2 Average loss: 0.00100869\n",
+      "====> Epoch: 2 Average loss: 0.03134434\n",
       "\n",
       "Started training epoch no. 3\n",
-      "====> Epoch: 3 Average loss: 0.00099918\n",
+      "====> Epoch: 3 Average loss: 0.03130354\n",
       "\n",
       "Started training epoch no. 4\n",
-      "====> Epoch: 4 Average loss: 0.00099897\n",
+      "====> Epoch: 4 Average loss: 0.03128520\n",
       "\n",
       "Started training epoch no. 5\n",
-      "====> Epoch: 5 Average loss: 0.00100200\n",
+      "====> Epoch: 5 Average loss: 0.03135182\n",
       "\n",
       "Started training epoch no. 6\n",
-      "====> Epoch: 6 Average loss: 0.00100659\n",
+      "====> Epoch: 6 Average loss: 0.03129094\n",
       "\n",
       "Started training epoch no. 7\n",
-      "====> Epoch: 7 Average loss: 0.00098981\n",
+      "====> Epoch: 7 Average loss: 0.03130094\n",
       "\n",
       "Started training epoch no. 8\n",
-      "====> Epoch: 8 Average loss: 0.00106974\n",
+      "====> Epoch: 8 Average loss: 0.03131626\n",
       "\n",
       "Started training epoch no. 9\n",
-      "====> Epoch: 9 Average loss: 0.00100509\n",
+      "====> Epoch: 9 Average loss: 0.03127607\n",
       "\n",
       "Started training epoch no. 10\n",
-      "====> Epoch: 10 Average loss: 0.00098318\n",
+      "====> Epoch: 10 Average loss: 0.03129387\n",
       "\n",
       "Started training epoch no. 11\n",
-      "====> Epoch: 11 Average loss: 0.00098829\n",
+      "====> Epoch: 11 Average loss: 0.03127298\n",
       "\n",
       "Started training epoch no. 12\n",
-      "====> Epoch: 12 Average loss: 0.00098325\n",
+      "====> Epoch: 12 Average loss: 0.03128767\n",
       "\n",
       "Started training epoch no. 13\n",
-      "====> Epoch: 13 Average loss: 0.00100060\n",
+      "====> Epoch: 13 Average loss: 0.03126626\n",
       "\n",
-      "Started training epoch no. 14\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-184-bc9b44051824>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_log\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_epoch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_function\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mEPOCHS\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-182-c11899d65f73>\u001b[0m in \u001b[0;36mtrain_epoch\u001b[0;34m(tr_loader, model, criterion, optimizer, num_epochs)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mrecon_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecon_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mtrain_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-179-67af0789c9a9>\u001b[0m in \u001b[0;36mloss_function\u001b[0;34m(recon_x, x, mu, log_var)\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mKLD_element\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_var\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_var\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mKLD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKLD_element\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKLD\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mMAE\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mKLD\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m#     return MSE + KLD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+      "Started training epoch no. 14\n",
+      "====> Epoch: 14 Average loss: 0.03128715\n",
+      "\n",
+      "Started training epoch no. 15\n",
+      "====> Epoch: 15 Average loss: 0.03126640\n",
+      "\n",
+      "Started training epoch no. 16\n",
+      "====> Epoch: 16 Average loss: 0.03128591\n",
+      "\n",
+      "Started training epoch no. 17\n",
+      "====> Epoch: 17 Average loss: 0.03126621\n",
+      "\n",
+      "Started training epoch no. 18\n",
+      "====> Epoch: 18 Average loss: 0.03134722\n",
+      "\n",
+      "Started training epoch no. 19\n",
+      "====> Epoch: 19 Average loss: 0.03129932\n",
+      "\n",
+      "Started training epoch no. 20\n",
+      "====> Epoch: 20 Average loss: 0.03130936\n",
+      "\n",
+      "Started training epoch no. 21\n",
+      "====> Epoch: 21 Average loss: 0.03126500\n",
+      "\n",
+      "Started training epoch no. 22\n",
+      "====> Epoch: 22 Average loss: 0.03131096\n",
+      "\n",
+      "Started training epoch no. 23\n",
+      "====> Epoch: 23 Average loss: 0.03128539\n",
+      "\n",
+      "Started training epoch no. 24\n",
+      "====> Epoch: 24 Average loss: 0.03126671\n",
+      "\n",
+      "Started training epoch no. 25\n",
+      "====> Epoch: 25 Average loss: 0.03129257\n",
+      "\n",
+      "Started training epoch no. 26\n",
+      "====> Epoch: 26 Average loss: 0.03129496\n",
+      "\n",
+      "Started training epoch no. 27\n",
+      "====> Epoch: 27 Average loss: 0.03130860\n",
+      "\n",
+      "Started training epoch no. 28\n",
+      "====> Epoch: 28 Average loss: 0.03126363\n",
+      "\n",
+      "Started training epoch no. 29\n",
+      "====> Epoch: 29 Average loss: 0.03130419\n",
+      "\n",
+      "Started training epoch no. 30\n",
+      "====> Epoch: 30 Average loss: 0.03129671\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "train_log = train_epoch(train_loader,model,loss_function,optimizer,num_epochs= EPOCHS*2)"
+    "train_log = train_epoch(train_loader,model,loss_function,optimizer,num_epochs= EPOCHS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'epoch': 0, 'train_loss': 0.032033293508072304},\n",
+       " {'epoch': 1, 'train_loss': 0.0313443402928408},\n",
+       " {'epoch': 2, 'train_loss': 0.03130354038713703},\n",
+       " {'epoch': 3, 'train_loss': 0.03128520204163148},\n",
+       " {'epoch': 4, 'train_loss': 0.03135182234086397},\n",
+       " {'epoch': 5, 'train_loss': 0.03129093511061868},\n",
+       " {'epoch': 6, 'train_loss': 0.031300939710008434},\n",
+       " {'epoch': 7, 'train_loss': 0.03131626033819399},\n",
+       " {'epoch': 8, 'train_loss': 0.03127606664416927},\n",
+       " {'epoch': 9, 'train_loss': 0.031293870635578036},\n",
+       " {'epoch': 10, 'train_loss': 0.031272982127842394},\n",
+       " {'epoch': 11, 'train_loss': 0.03128767108192486},\n",
+       " {'epoch': 12, 'train_loss': 0.03126625824108223},\n",
+       " {'epoch': 13, 'train_loss': 0.03128715181751548},\n",
+       " {'epoch': 14, 'train_loss': 0.031266404446310916},\n",
+       " {'epoch': 15, 'train_loss': 0.03128590935649355},\n",
+       " {'epoch': 16, 'train_loss': 0.03126620528420011},\n",
+       " {'epoch': 17, 'train_loss': 0.03134722151213331},\n",
+       " {'epoch': 18, 'train_loss': 0.03129931746739184},\n",
+       " {'epoch': 19, 'train_loss': 0.03130936318194106},\n",
+       " {'epoch': 20, 'train_loss': 0.031265002750243034},\n",
+       " {'epoch': 21, 'train_loss': 0.031310963093692926},\n",
+       " {'epoch': 22, 'train_loss': 0.031285390800639},\n",
+       " {'epoch': 23, 'train_loss': 0.03126670860865631},\n",
+       " {'epoch': 24, 'train_loss': 0.03129257458503576},\n",
+       " {'epoch': 25, 'train_loss': 0.031294960590294366},\n",
+       " {'epoch': 26, 'train_loss': 0.031308604357673187},\n",
+       " {'epoch': 27, 'train_loss': 0.031263626059834376},\n",
+       " {'epoch': 28, 'train_loss': 0.03130419125042332},\n",
+       " {'epoch': 29, 'train_loss': 0.03129671056636821}]"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using pre-defined VAE FEATURES\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/AYP/code/py_4/get_all_features.py:85: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  - co_authors to vector\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using old scaler\n",
+      "['MESH NAME NOT FOUND: Early Intervention, Educational', 'MESH NAME NOT FOUND: Dependency, Psychological', 'MESH NAME NOT FOUND: Reinforcement, Psychology', 'MESH NAME NOT FOUND: Recognition, Psychology', 'MESH NAME NOT FOUND: Conditioning, Psychological', 'MESH NAME NOT FOUND: Sphingosine-1-Phosphate Receptors', 'MESH NAME NOT FOUND: Phospholipid Hydroperoxide Glutathione Peroxidase', \"MESH NAME NOT FOUND: Practice Patterns, Physicians'\", 'MESH NAME NOT FOUND: Lactate Dehydrogenase 5', 'MESH NAME NOT FOUND: Cyclophilin D', 'MESH NAME NOT FOUND: Phosphoinositide-3 Kinase Inhibitors', 'MESH NAME NOT FOUND: Chlorocebus aethiops', 'MESH NAME NOT FOUND: Indigenous Peoples', 'MESH NAME NOT FOUND: Neural Networks, Computer', 'MESH NAME NOT FOUND: Protein-Arginine Deiminase Type 4', 'MESH NAME NOT FOUND: Infections', 'MESH NAME NOT FOUND: RNA, Circular', 'MESH NAME NOT FOUND: Outcome Assessment, Health Care', 'MESH NAME NOT FOUND: Broadly Neutralizing Antibodies', 'MESH NAME NOT FOUND: Discrimination, Psychological', 'MESH NAME NOT FOUND: Female', 'MESH NAME NOT FOUND: Male', 'MESH NAME NOT FOUND: Illicit Drugs']\n"
+     ]
+    }
+   ],
    "source": [
     "test_set = ToyDS(df, selection_test, vae_features = train_set.__getvae__())\n",
     "test_loader=DataLoader(dataset= test_set, batch_size = BATCH_SIZE, shuffle = True, num_workers = num_workers)"
@@ -610,16 +729,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> Test set loss: 0.0010\n"
+     ]
+    }
+   ],
    "source": [
     "test_model(test_loader, model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,9 +765,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0305374517106745"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(np.square(x_hat_test.detach().cpu().numpy() - test_set.features))"
    ]
